animated contact area

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<script type="text/javascript" src="script/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="script/jssor.slider.mini.js"></script>
-	<script src="script/gallery.js"></script>						
+	<script src="script/gallery.js"></script>			
+	<script src="script/app.js"></script>			
 	</body>
 </html>
