--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
     <title>Phil Fluegel</title>
     <meta name="viewport" content="width=device-width, initial-scale= 1">
+    <meta name=”description” content=”Front-End-Web-Developer” >
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
@@ -10,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	 <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/mac.png">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
@@ -17,7 +19,7 @@
 		<div id="nav-area">
 			<h2 id="name">Phil Fluegel</h2>
 			<ul>
-					<a href="#form"><li><span class="ion-email"></span></li></a>
+					<a href="#form-container"><li><span class="ion-email"></span></li></a>
 					<a href="https://www.facebook.com/phil.fluegel?ref=br_rs"><li><span class="ion-social-facebook"></span></li></a>
 					<a href="https://github.com/pfluegel"><li><span class="ion-social-github"></span></li></a>
 					<a href="https://www.linkedin.com/in/phil-fluegel-a7b18642"><li><span class="ion-social-linkedin"></span></li></a>
@@ -49,10 +51,16 @@
 				<a href="http://www.frybabies.org"><img data-u="image" src="assets/images/frybabies.png" /></a>
 			</div>
 			<div data-p="112.50" style="display: none;">
+				<a href="http://pfluegel.github.io/bloc-jams/index.html"><img data-u="image" src="assets/images/blocJams.png" /></a>
+			</div>
+			<div data-p="112.50" style="display: none;">
+				<a href="http://radiant-thicket-92194.herokuapp.com/"><img data-u="image" src="assets/images/timer.png" /></a>
+			</div>
+			<div data-p="112.50" style="display: none;">
 				<a href="https://cryptic-coast-4830.herokuapp.com/"><img data-u="image" src="assets/images/blocipedia.png" /></a>
 			</div>
 			<div data-p="112.50" style="display: none;">
-				<img data-u="image" src="assets/images/mentorhub.png" />
+				<a href="http://mentorsite.herokuapp.com/"><img data-u="image" src="assets/images/mentorhub.png" /></a>
 			</div>
 			<div data-p="112.50" style="display: none;">
 				<a href="https://infinite-anchorage-3954.herokuapp.com/"><img data-u="image" src="assets/images/blocmarks.png" /></a>
@@ -78,7 +86,7 @@
 
 	</div>
 
-	<div class="form-container">
+	<div class="form-container" id="form-container">
 		<div class="section-left">
 			<img id="phil" src="assets/images/phil.png">
 			<p>Please feel free to contact me for more information!</p>
@@ -98,7 +106,16 @@
 	<div class="footer">
 
 	</div>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-77436639-1', 'auto');
+  ga('send', 'pageview');
+
+	</script>
 	<script type="text/javascript" src="script/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="script/jssor.slider.mini.js"></script>
 	<script src="script/gallery.js"></script>			
