--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
 				<a href="http://radiant-thicket-92194.herokuapp.com/"><img data-u="image" src="assets/images/timer.png" /></a>
 			</div>
 			<div data-p="112.50" style="display: none;">
-				<a href="https://cryptic-coast-4830.herokuapp.com/"><img data-u="image" src="assets/images/blocipedia.png" /></a>
+				<a href="http://mentorsite.herokuapp.com/"><img data-u="image" src="assets/images/mentor_hub.png" /></a>
+			</div>
+				<div data-p="112.50" style="display: none;">
+				<a href="http://pfluegel.github.io/kirras_kakes/index.html"><img data-u="image" src="assets/images/kirras-kakes.png" /></a>
 			</div>
 			<div data-p="112.50" style="display: none;">
-				<a href="http://mentorsite.herokuapp.com/"><img data-u="image" src="assets/images/mentorhub.png" /></a>
+				<a href="https://cryptic-coast-4830.herokuapp.com/"><img data-u="image" src="assets/images/blocipedia.png" /></a>
 			</div>
 			<div data-p="112.50" style="display: none;">
 				<a href="https://infinite-anchorage-3954.herokuapp.com/"><img data-u="image" src="assets/images/blocmarks.png" /></a>
