dropdown nav on scroll

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
      <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 	<body>
-		<div id="nav-area">
+		<div id="nav-area" class="hidden-nav">
 			<h2 id="name">Phil Fluegel</h2>
+			<ul>
+					<a href="#form-container"><li><span class="ion-email"></span></li></a>
+					<a href="https://www.facebook.com/phil.fluegel?ref=br_rs"><li><span class="ion-social-facebook"></span></li></a>
+					<a href="https://github.com/pfluegel"><li><span class="ion-social-github"></span></li></a>
+					<a href="https://www.linkedin.com/in/phil-fluegel-a7b18642"><li><span class="ion-social-linkedin"></span></li></a>
+			</ul>
+		</div>
+		<div id="nav-area">
+			<h2 class="name">Phil Fluegel</h2>
 			<ul>
 					<a href="#form-container"><li><span class="ion-email"></span></li></a>
 					<a href="https://www.facebook.com/phil.fluegel?ref=br_rs"><li><span class="ion-social-facebook"></span></li></a>
